--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "d3": "^7.9.0",
     "leaflet": "^1.9.4",
+    "lucide-vue-next": "^0.474.0",
     "vue": "^3.5.13",
     "vue-leaflet": "^0.1.0",
     "vue-router": "^4.5.0"
