--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@turf/turf": "^7.2.0",
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.474.0",
