--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@gouvfr/dsfr": "^1.13.1",
+    "@gouvminint/vue-dsfr": "^8.3.1",
     "@turf/turf": "^7.2.0",
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
